# lab_Computer_Vision

./: README.md
Lab1/Lab1/Lab1/: main.cpp
Lab4/Lab4/src/: main.cpp
Lab5/Lab5/: CMakeLists.txt
Lab5/Lab5/include/: PanoramicImage.h  panoramic_utils.h
Lab5/Lab5/src/: Main.cpp  PanoramicImage.cpp
Lab6/Lab6/: CMakeLists.txt
Lab6/Lab6/Backup/: main.cpp
Lab6/Lab6/Lab62.xcodeproj/: project.pbxproj
Lab6/Lab6/Lab62.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Lab6/Lab6/Lab62.xcodeproj/project.xcworkspace/xcuserdata/andreaoriolo.xcuserdatad/: UserInterfaceState.xcuserstate
Lab6/Lab6/Lab62.xcodeproj/xcshareddata/xcschemes/: OpenCVTest.xcscheme
Lab6/Lab6/Lab62.xcodeproj/xcuserdata/andreaoriolo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Lab6/Lab6/Lab62.xcodeproj/xcuserdata/andreaoriolo.xcuserdatad/xcschemes/: xcschememanagement.plist
Lab6/Lab6/src/: main.cpp
Lab6/Lab_6_data/: help.txt
src/: main.cpp
